--- a/frontend/index.html
+++ b/frontend/index.html
@@ -97,11 +97,10 @@
 <div class="content-inner"><div class="wseSHBL"></div><div class="wseSHBR"></div><div class="wseSHTL"></div><div class="wseSHTR"></div></div></div></div></div>
 
 
-<!-- Paste your Kommunicate JavaScript plugin here -->
 <script type="text/javascript">
     (function(d, m){
-        var kommunicateSettings = 
-            {"appId":"<YOUR-KOMMUNICATE-APP-ID>","popupWidget":true,"automaticChatOpenOnNavigation":true};
+        var kommunicateSettings =
+            {"appId":"28a9dfb30cfc3f4379728bd22f4ca689e","popupWidget":true,"automaticChatOpenOnNavigation":true};
         var s = document.createElement("script"); s.type = "text/javascript"; s.async = true;
         s.src = "https://widget.kommunicate.io/v2/kommunicate.app";
         var h = document.getElementsByTagName("head")[0]; h.appendChild(s);
